--- a/courses.html
+++ b/courses.html
@@ -15,6 +15,8 @@
     <link rel="preconnect" href="http://fonts.gstatic.com">
     <link href="http://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
+    <!-- SWIPERJR CDN -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/style.css">
     
     <style>
@@ -46,9 +48,9 @@
                     <img src="./image/course/course1.jpg" alt="">
                 </div>
                 <div class="course__info">
-                <h4>BACHELOR OF SCIENCE IN COMPUTER SCIENCE</h4>
-                <p>Graduates of the BSCS program are well-equipped for careers in software development, data analysis, cybersecurity, and other cutting-edge fields, contributing to the advancement of technology and computing.</p>
-                <a href="./bscs.html" class="btn btn-primary">Learn More</a>
+                    <h4>BACHELOR OF SCIENCE IN COMPUTER SCIENCE</h4>
+                    <p>Graduates of the BSCS program are well-equipped for careers in software development, data analysis, cybersecurity, and other cutting-edge fields, contributing to the advancement of technology and computing.</p>
+                    <a href="./bscs.html" class="btn btn-primary">Learn More</a>
                 </div>
             </article>
 
@@ -68,9 +70,9 @@
                     <img src="./image/course/course3.jpg" alt="">
                 </div>
                 <div class="course__info">
-                <h4>BACHELOR OF SCIENCE IN ENTREPRENEURSHIP</h4>
-                <p>BSEN equips individuals to initiate and grow successful businesses or contribute innovatively to existing enterprises in a rapidly evolving business landscape, blend of theoretical knowledge and hands-on experience.</p>
-                <a href="./bsen.html" class="btn btn-primary">Learn More</a>
+                    <h4>BACHELOR OF SCIENCE IN ENTREPRENEURSHIP</h4>
+                    <p>BSEN equips individuals to initiate and grow successful businesses or contribute innovatively to existing enterprises in a rapidly evolving business landscape, blend of theoretical knowledge and hands-on experience.</p>
+                    <a href="./bsen.html" class="btn btn-primary">Learn More</a>
                 </div>
             </article>
 
@@ -79,9 +81,9 @@
                     <img src="./image/course/course4.jpg" alt="">
                 </div>
                 <div class="course__info">
-                <h4>TECHNICAL-VOCATIONAL-LIVELIHOOD INFORMATION AND COMMUNICATIONS TECHNOLOGY</h4>
-                <p>TVL-ICT not only focuses on theoretical foundations but also emphasizes real-world applications, ensuring that graduates are prepared for the demands of the digital age, deep understanding of ICT tools and technologies.</p>
-                <a href="https://www.onlineshs.com/information-and-communication-technology/" class="btn btn-primary" target="_blank">Learn More</a>
+                    <h4>TECHNICAL-VOCATIONAL-LIVELIHOOD INFORMATION AND COMMUNICATIONS TECHNOLOGY</h4>
+                    <p>TVL-ICT not only focuses on theoretical foundations but also emphasizes real-world applications, ensuring that graduates are prepared for the demands of the digital age, deep understanding of ICT tools and technologies.</p>
+                    <a href="https://www.onlineshs.com/information-and-communication-technology/" class="btn btn-primary" target="_blank">Learn More</a>
                 </div>
             </article>
 
@@ -90,9 +92,9 @@
                     <img src="./image/course/course5.jpg" alt="">
                 </div>
                 <div class="course__info">
-                <h4>ACCOUNTANCY, BUSINESS, AND MANAGEMENT</h4>
-                <p>ABM course not only prepares individuals for successful careers in accountancy and finance but also cultivates their abilities to navigate the dynamic world of business, blend of theoretical knowledge and practical applications.</p>
-                <a href="https://www.onlineshs.com/abm/" class="btn btn-primary" target="_blank">Learn More</a>
+                    <h4>ACCOUNTANCY, BUSINESS, AND MANAGEMENT</h4>
+                    <p>ABM course not only prepares individuals for successful careers in accountancy and finance but also cultivates their abilities to navigate the dynamic world of business, blend of theoretical knowledge and practical applications.</p>
+                    <a href="https://www.onlineshs.com/abm/" class="btn btn-primary" target="_blank">Learn More</a>
                 </div>
             </article>
 
@@ -101,9 +103,9 @@
                     <img src="./image/course/course6.jpg" alt="">
                 </div>
                 <div class="course__info">
-                <h4>GENERAL ACADEMIC STRAND</h4>
-                <p>GAS prepares individuals for diverse fields, laying a solid foundation for higher education and fostering a holistic approach to learning, variety of subjects, including humanities, social sciences, and natural sciences.</p>
-                <a href="https://www.onlineshs.com/gas/" class="btn btn-primary" target="_blank">Learn More</a>
+                    <h4>GENERAL ACADEMIC STRAND</h4>
+                    <p>GAS prepares individuals for diverse fields, laying a solid foundation for higher education and fostering a holistic approach to learning, variety of subjects, including humanities, social sciences, and natural sciences.</p>
+                    <a href="https://www.onlineshs.com/gas/" class="btn btn-primary" target="_blank">Learn More</a>
                 </div>
             </article>
 
@@ -112,14 +114,83 @@
                     <img src="./image/course/course7.jpg" alt="">
                 </div>
                 <div class="course__info">
-                <h4>ASSOCIATE IN COMPUTER TECHNOLOGY</h4>
-                <p>ACT program are well-prepared to contribute to the ever-growing technology sector, whether in technical support, software development, or IT management roles, through theoretical knowledge and hands-on experience.</p>
-                <a href="./act.html" class="btn btn-primary">Learn More</a>
+                    <h4>ASSOCIATE IN COMPUTER TECHNOLOGY</h4>
+                    <p>ACT program are well-prepared to contribute to the ever-growing technology sector, whether in technical support, software development, or IT management roles, through theoretical knowledge and hands-on experience.</p>
+                    <a href="./act.html" class="btn btn-primary">Learn More</a>
                 </div>
             </article>
         </div>
     </section>
     <!-- END OF COURSES -->
+
+    <section class="associates">
+        <h2>OUR POPULAR ASSOCIATE DEGREE</h2>
+        <div class="container associates__container">
+            <article class="associate">
+                <div class="associate__image">
+                    <video width="350" height="350" autoplay muted loop>
+                        <source src="./image/course/ABM.mp4" type="video/mp4"/>
+                    </video>
+                </div>
+                <div class="associate__info">
+                    <h4>ABM</h4>
+                    <p>ABM strand curriculum is designed to prepare senior high school students for careers in accountancy, business, and entrepreneurship. Students will gain essential skills in accounting, financial management, and commerce, and engage in business simulations to understand managerial decision-making.</p>
+                    <a href="https://www.onlineshs.com/abm/" class="btn btn-primary" target="_blank">Learn More</a>
+                </div>
+            </article>
+
+            <article class="associate">
+                <div class="associate__image">
+                    <video width="350" height="350" autoplay muted loop>
+                        <source src="./image/course/GAS.mp4" type="video/mp4"/>
+                    </video>
+                </div>
+                <div class="associate__info">
+                    <h4>GAS</h4>
+                    <p>GAS program offers senior high school students a broad range of subjects, helping them discover their best fit. Students can take courses like Disaster Preparedness, Risk Reduction, and Organization Management, and STEM, and make informed decisions about their undergraduate programs and future careers.</p>
+                    <a href="https://www.onlineshs.com/gas/" class="btn btn-primary" target="_blank">Learn More</a>
+                </div>
+            </article>
+
+            <article class="associate">
+                <div class="associate__image">
+                    <video width="350" height="350" autoplay muted loop>
+                        <source src="./image/course/ICT.mp4" type="video/mp4"/>
+                    </video>
+                </div>
+                <div class="associate__info">
+                    <h4>TVL-ICT</h4>
+                    <p>ICT strand in SHS equips students with technical skills for the IT industry. Graduates will be able to use industry-standard equipment, think critically to solve software and hardware issues, confidently use essential tech and software, and apply their knowledge decisively in further education or professional roles.</p>
+                    <a href="https://www.onlineshs.com/information-and-communication-technology/" class="btn btn-primary" target="_blank">Learn More</a>
+                </div>
+            </article>
+        </div>
+    </section>
+    <!-- END OF ASSOCIATE DEGREE -->
+
+    <section id="uniform">
+        <div class="container uniform__container swiper mySwiper">
+            <div class="uniform__head">
+                <h2 class="uniform__title">UNIVERSITY UNIFORM</h2>
+                <div class="empty uniform__empty"></div>
+            </div>
+            <div class="swiper-wrapper">
+                <article class="swiper-slide">
+                    <img src="image/course/College.jpg">
+                </article>
+
+                <article class="swiper-slide">
+                    <img src="image/course/Org.jpg">
+                </article>
+
+                <article class="swiper-slide">
+                    <img src="image/course/SHS.jpg">
+                </article>
+            </div>
+            <div class="swiper-pagination"></div>
+        </div>
+    </section>
+    <!-- END OF UNIVERSITY UNIFORM -->
 
     <footer>
         <div class="container footer__container">
@@ -172,6 +243,7 @@
     </footer>
     <!-- END OF FOOTER -->
 
+      <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
       <script src="./main.js"></script>
 </body>
 </html>
