--- a/index.html
+++ b/index.html
@@ -328,6 +328,10 @@
                 <article class="swiper-slide">
                     <img src="./image/event/event13.jpg">
                 </article>
+
+                <article class="swiper-slide">
+                    <img src="./image/event/event14.jpg">
+                </article>
             </div>
             <div class="swiper-pagination"></div>
         </div>
